--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <p class="profile__description">Civil Aviator</p>
             <a type="button" class="profile__edit-btn" href="#">
               <img
-                class="profile__edit-btn_icon"
+                class="profile__edit-btn-icon"
                 src="./images/edit_icon.svg"
                 alt="Edit Icon"
               />Edit Profile
