--- a/index.html
+++ b/index.html
@@ -28,73 +28,97 @@
           <div class="profile__column">
             <h1 class="profile__name">Bessie Coleman</h1>
             <p class="profile__description">Civil Aviator</p>
-            <a type="button" class="profile__edit-btn" href="#">
+            <button type="button" class="profile__edit-btn" href="#">
               <img
                 class="profile__edit-btn-icon"
                 src="./images/edit_icon.svg"
                 alt="Edit Icon"
               />Edit Profile
-            </a>
+            </button>
           </div>
-          <a type="button" class="profile__add-btn" href="#">
+          <button type="button" class="profile__add-btn" href="#">
             <img src="./images/plus_icon.svg" alt="Plus Icon" />
             New Post
-          </a>
+          </button>
         </section>
         <section class="cards page__section-container">
           <ul class="cards__list">
             <li class="card">
-              <img class="card__image" src="./images/1-photo-by-moritz-feldmann-from-pexels.jpg" alt="Val Thorens"></img>
+              <img
+                class="card__image"
+                src="./images/1-photo-by-moritz-feldmann-from-pexels.jpg"
+                alt="Val Thorens"
+              />
               <div class="card__content">
-                <h3 class="card__title">Val Thorens</h3>
-                <a class="card__like-btn" href="#">
-            <img src="./images/heart_icon.svg" alt="Like Icon" />
-          </a>
+                <h2 class="card__title">Val Thorens</h2>
+                <button type="button" class="card__like-btn" href="#">
+                  <img src="./images/heart_icon.svg" alt="Like Icon" />
+                </button>
               </div>
             </li>
-             <li class="card">
-              <img class="card__image" src="./images/2-photo-by-ceiline-from-pexels.jpg" alt="Val Thorens"></img>
+            <li class="card">
+              <img
+                class="card__image"
+                src="./images/2-photo-by-ceiline-from-pexels.jpg"
+                alt="Restaurant Terrace"
+              />
               <div class="card__content">
-                <h3 class="card__title">Restaurant Terrace</h3>
-                <a class="card__like-btn" href="#">
-            <img src="./images/heart_icon.svg" alt="Like Icon" />
-          </a>
+                <h2 class="card__title">Restaurant Terrace</h2>
+                <button type="button" class="card__like-btn" href="#">
+                  <img src="./images/heart_icon.svg" alt="Like Icon" />
+                </button>
               </div>
             </li>
-             <li class="card">
-              <img class="card__image" src="./images/3-photo-by-tubanur-dogan-from-pexels.jpg" alt="Val Thorens"></img>
+            <li class="card">
+              <img
+                class="card__image"
+                src="./images/3-photo-by-tubanur-dogan-from-pexels.jpg"
+                alt="An Outdoor Cafe"
+              />
               <div class="card__content">
-                <h3 class="card__title">An Outdoor Cafe</h3>
-                <a class="card__like-btn" href="#">
-            <img src="./images/heart_icon.svg" alt="Like Icon" />
-          </a>
+                <h2 class="card__title">An Outdoor Cafe</h2>
+                <button type="button" class="card__like-btn" href="#">
+                  <img src="./images/heart_icon.svg" alt="Like Icon" />
+                </button>
               </div>
             </li>
-             <li class="card">
-              <img class="card__image" src="./images/4-photo-by-maurice-laschet-from-pexels.jpg" alt="Val Thorens"></img>
+            <li class="card">
+              <img
+                class="card__image"
+                src="./images/4-photo-by-maurice-laschet-from-pexels.jpg"
+                alt="A very long bridge, over the forest"
+              />
               <div class="card__content">
-                <h3 class="card__title">A very long bridge, over the forest</h3>
-                <a class="card__like-btn" href="#">
-            <img src="./images/heart_icon.svg" alt="Like Icon" />
-          </a>
+                <h2 class="card__title">A very long bridge, over the forest</h2>
+                <button type="button" class="card__like-btn" href="#">
+                  <img src="./images/heart_icon.svg" alt="Like Icon" />
+                </button>
               </div>
             </li>
-             <li class="card">
-              <img class="card__image" src="./images/5-photo-by-van-anh-nguyen-from-pexels.jpg" alt="Val Thorens"></img>
-              <div class="card__content">
-                <h3 class="card__title">Tunnel with morning light</h3>
-                <a class="card__like-btn" href="#">
-            <img src="./images/heart_icon.svg" alt="Like Icon" />
-          </a>
+            <li class="card">
+              <img
+                class="card__image"
+                src="./images/5-photo-by-van-anh-nguyen-from-pexels.jpg"
+                alt="Tunnel with morning light"
+              />
+              <div class="card__content" 1>
+                <h2 class="card__title">Tunnel with morning light</h2>
+                <button type="button" class="card__like-btn" href="#">
+                  <img src="./images/heart_icon.svg" alt="Like Icon" />
+                </button>
               </div>
             </li>
-             <li class="card">
-              <img class="card__image" src="./images/6-photo-by-moritz-feldmann-from-pexels.jpg" alt="Val Thorens"></img>
+            <li class="card">
+              <img
+                class="card__image"
+                src="./images/6-photo-by-moritz-feldmann-from-pexels.jpg"
+                alt="Mountain House"
+              />
               <div class="card__content">
-                <h3 class="card__title">Mountain house</h3>
-                <a class="card__like-btn" href="#">
-            <img src="./images/heart_icon.svg" alt="Like Icon" />
-          </a>
+                <h2 class="card__title">Mountain house</h2>
+                <button type="button" class="card__like-btn" href="#">
+                  <img src="./images/heart_icon.svg" alt="Like Icon" />
+                </button>
               </div>
             </li>
           </ul>
